--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "dotenv": "^10.0.0",
     "path": "^0.12.7"
   }
 }
